--- a/rps.html
+++ b/rps.html
@@ -12,6 +12,11 @@
             <div class="playerScore">Player Score</div>
             <div class="cpuScore">CPU Score</div>
         </div>
+        <div class="fightArea">            
+        </div>
+        <div class="winArea">
+            
+        </div>
         <div id="gameArea">
             <div class="gameChoices">
                 <div class="rock">
