--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <body>
         <div class="header">Rock Paper Scissors</div>
         <div class="scoreArea">
-            <div class="playerScore">Player Score</div>
-            <div class="cpuScore">CPU Score</div>
+            <div class="playerScore">Player Score: 0</div>
+            <div class="cpuScore">CPU Score: 0</div>
         </div>
-        <div class="fightArea">            
+        <div class="fightArea">Heaven or Hell, Duel 1, Let's Rock     
         </div>
         <div class="winArea">
             
