--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="playerScore">Player Score: 0</div>
             <div class="cpuScore">CPU Score: 0</div>
         </div>
-        <div class="fightArea">Heaven or Hell, Duel 1, Let's Rock     
+        <div class="fightArea">Heaven or Hell, First to 5, Let's Rock!
         </div>
         <div class="winArea">
             
