--- a/index.html
+++ b/index.html
@@ -21,21 +21,18 @@
             <div class="gameChoices">
                 <div class="rock">
                     <div class="rockImage">
-                        <img src="https://c1.scryfall.com/file/scryfall-cards/large/front/7/e/7e216977-d414-4e04-aca9-765ea8ea298c.jpg?1583965849">
+                        <img src="https://c1.scryfall.com/file/scryfall-cards/large/front/7/e/7e216977-d414-4e04-aca9-765ea8ea298c.jpg?1583965849" class="image">
                     </div>
-                    <button id="rockButton">Rock</button>
                 </div>
                 <div class="paper">
                     <div class="paperImage">
-                        <img src="https://c1.scryfall.com/file/scryfall-cards/large/front/a/8/a8041ade-5522-4f81-950c-7a610a28da00.jpg?1583965833">
+                        <img src="https://c1.scryfall.com/file/scryfall-cards/large/front/a/8/a8041ade-5522-4f81-950c-7a610a28da00.jpg?1583965833" class="image">
                     </div>
-                    <button id="paperButton">Paper</button>
                 </div>
                 <div class="scissors">
                     <div class="scissorsImage">
-                        <img src="https://c1.scryfall.com/file/scryfall-cards/large/front/f/9/f95ec736-67af-443a-a91a-dfd1b2151030.jpg?1583965858">
+                        <img src="https://c1.scryfall.com/file/scryfall-cards/large/front/f/9/f95ec736-67af-443a-a91a-dfd1b2151030.jpg?1583965858" class="image">
                     </div>
-                    <button id="scissorsButton">Scissors</button>
                 </div>
             </div>
         </div>
